# WorkPet

./: .firebaserc  .gitignore  PRESENTATION.md  README.md  firebase.json  firestore.rules  gacha.html  index.html  manifest.json  package-lock.json  package.json  panel.html  profile.html  screenshot.html  tailwind.config.js  team_room.html  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
functions/: package-lock.json  package.json
functions/lib/: index.js  index.js.map
functions/src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/lottie/pets/: beaver.json  hamster.json
src/background/: background.ts  config.ts  fcm.ts  watchSetup.ts
src/background/api/: auth.ts  fcm.ts  gemini.ts  gmail.ts  googleCalendar.ts  watchSetup.ts
src/content/: content.css  index.tsx
src/content/components/: BrowserToolsPanel.tsx  ColorPickerPanel.tsx  FocusTimerPanel.tsx  GeminiAskPanel.tsx  MondayGacha.tsx  MorningBriefingDashboard.tsx  OrbitCharacter.tsx  PetOverlay.tsx  PetSpeechBubble.tsx  QuickMemoPanel.tsx  ScreenshotSelector.tsx  SummarizePanel.tsx  SvgPet.tsx  TranslatePanel.tsx  WanderingPetContainer.tsx  WordCountPanel.tsx
src/desktop/: App.tsx
src/desktop/components/: LottiePet.tsx  Mochi.tsx  Mofu.tsx  Nova.tsx  PetQuestionInput.tsx  PetSpeechBubble.tsx  PetSprite.tsx  Pico.tsx  Sprout.tsx  SvgPet.tsx  petActions.ts  petFaces.tsx  pico.css
src/desktop/gacha/: Gacha.tsx  main.tsx
src/desktop/panel/: Panel.tsx  main.tsx
src/desktop/panel/panels/: BreakReminderPanel.tsx  ClipboardHistoryPanel.tsx  ColorPickerPanel.tsx  FocusTimerPanel.tsx  GeminiAskPanel.tsx  QuickMemoPanel.tsx  ReminderPanel.tsx  ScreenshotPanel.tsx  SummarizePanel.tsx  TodoPanel.tsx  TranslatePanel.tsx  UsageReportPanel.tsx  WordCountPanel.tsx  geminiHelpers.ts  llmHelpers.ts
src/desktop/panel/tabs/: AlertsTab.tsx  BriefingTab.tsx  PetTab.tsx  SettingsTab.tsx  ToolsTab.tsx  UsageTab.tsx
src/desktop/profile/: Profile.tsx  main.tsx
src/desktop/screenshot/: Screenshot.tsx  main.tsx
src/desktop/team_room/: Lobby.tsx  TeamRoom.tsx  WalkBoard.tsx  main.tsx
src/popup/: App.tsx  index.html  main.tsx  popup.css
src/shared/: auth.ts  breakReminders.ts  briefing.ts  clipboardHistory.ts  firebase.ts  firebaseConfig.ts  korean.ts  meetingMode.ts  notifications.ts  oauthConfig.ts  petCatalog.ts  reminders.ts  scheduler.ts  storage.ts  teamRoom.ts  types.ts  usageTracker.ts
src/shared/api/: fetchWithAuth.ts  gemini.ts  gmail.ts  googleCalendar.ts  llm.ts
src/types/: messages.ts
